# BUFFET

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md
.github/workflows/: refresh.yml
data/: ledger.json
data/mapping/: recipient_overrides.csv  recipients.csv  sectors.csv
pipeline/: pyproject.toml
pipeline/buffet/: announce.py  audit_recipients.py  backtest.py  cache.py  config.py  fetch_awards.py  fetch_fundamentals.py  fetch_news.py  fetch_prices.py  fetch_spending.py  growth.py  ledger.py  mapping.py  portfolio.py  publish.py  rank.py  refresh.py  signals.py  survivorship.py  thesis.py
web/: index.html  package-lock.json  package.json
web/public/data/: announce.json  audit.json  awards.json  backtest.json  growth.json  ledger.json  meta.json  news.json  picks.json  portfolio.json  quotes.json  signals.json  spending.json  survivorship.json  thesis.json  universe.json
web/public/data/prices/: ACM.json  ACN.json  AMTM.json  AMZN.json  AVAV.json  BA.json  BAH.json  BWXT.json  CACI.json  CAH.json  CNC.json  COR.json  CSCO.json  CVS.json  CW.json  DELL.json  DGX.json  EBS.json  ELV.json  FDX.json  FLR.json  GD.json  GE.json  HII.json  HON.json  HPE.json  HUM.json  IBM.json  ICFI.json  ITA.json  J.json  JNJ.json  KBR.json  KTOS.json  LDOS.json  LEU.json  LHX.json  LMT.json  MCK.json  MMS.json  (+26 more)
web/scripts/: fetch-page.mjs
web/src/: App.jsx  main.jsx  theme.css  useData.js
web/src/components/: PicksBoard.jsx  TickerTape.jsx
web/src/pages/: Backtest.jsx  Company.jsx  Dashboard.jsx  Leaderboard.jsx  Ledger.jsx  Theory.jsx
